# game.libretro.ppsspp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
debian/: changelog.in  control  copyright
depends/common/ppsspp/: CMakeLists.txt  ppsspp.txt
game.libretro.ppsspp/: addon.xml  addon.xml.in
game.libretro.ppsspp/resources/: buttonmap.xml  settings.xml
game.libretro.ppsspp/resources/language/English/: strings.po
game.libretro.ppsspp/resources/language/resource.language.en_gb/: strings.po
